--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,10 @@ header a {
   color: #404bbf;
 }
 
+.nav-studio {
+  color: #404bbf;
+}
+
 .nav-studio::after {
   position: absolute;
   width: 100%;
@@ -173,14 +177,19 @@ address {
 
 /* __________HERO__________ */
 
+.main > .container {
+  width: 1440px;
+  margin: 0 auto;
+}
+
 .main-box {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 188px 0;
 }
 
 .main {
+  padding: 188px 0;
   background-color: #2e2f42;
   background-image: linear-gradient(
       to bottom,
@@ -190,8 +199,7 @@ address {
     url(../images/background.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  width: 1440px;
-  margin: 0 auto;
+  background-size: cover;
 }
 
 .main-title {
@@ -398,6 +406,7 @@ footer {
 footer > .container {
   display: flex;
   gap: 120px;
+  align-items: baseline;
 }
 
 .studio {
