--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ img {
 }
 
 .icon {
-  fill: none;
+  fill: #2e2f42;
 }
 
 /* __________HEADER__________ */
@@ -150,7 +150,7 @@ header a {
   width: 100%;
   height: 4px;
   left: 0;
-  bottom: 0;
+  bottom: -1px;
   background-color: #404bbf;
   border-radius: 2px;
   content: "";
@@ -168,6 +168,9 @@ address {
   font-style: normal;
   letter-spacing: 0.02em;
   text-decoration: none;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-list-link:hover,
@@ -177,11 +180,6 @@ address {
 
 /* __________HERO__________ */
 
-.main > .container {
-  width: 1440px;
-  margin: 0 auto;
-}
-
 .main-box {
   display: flex;
   flex-direction: column;
@@ -189,6 +187,8 @@ address {
 }
 
 .main {
+  max-width: 1440px;
+  margin: 0 auto;
   padding: 188px 0;
   background-color: #2e2f42;
   background-image: linear-gradient(
@@ -325,7 +325,7 @@ address {
 }
 
 .team-box .icon {
-  fill: #ffffff;
+  fill: #f4f4fd;
 }
 
 /* __________PORTFOLIO__________ */
@@ -376,9 +376,7 @@ address {
   background-color: #4d5ae5;
   width: 100%;
   height: 100%;
-  padding-top: 40px;
-  padding-left: 32px;
-  padding-right: 32px;
+  padding: 40px 32px;
   transform: translateY(100%);
   transition-property: transform;
   transition-duration: 250ms;
@@ -460,5 +458,5 @@ footer > .container {
 }
 
 .footer-icon .icon {
-  fill: #ffffff;
+  fill: #f4f4fd;
 }
